# signal-stream-backend

./: .dockerignore  .gitignore  API_GUIDE.md  BACKEND_DATA_FLOW.md  BUILD_COMPLETE.md  Dockerfile  LICENSE  PROJECT_OVERVIEW.md  README.md  SCHEMA_REGISTRY.md  SETUP.md  check_config.py  check_connectivity.py  check_topics.py  cloudbuild.yaml  debug_kafka.py  debug_ksqldb_connection.py  demo_schema_registry.py  example.py  init_ksqldb.py  pyproject.toml  requirements.txt  run.py  start.sh  start_server.sh  test.sh  test_api.py  test_app.py  test_kafka_connection.py  test_server.py  test_simple_app.py  verify_health.py
ksqldb/: schema.sql
src/: __init__.py  main.py
src/ai/: __init__.py  gemini_service.py  mock_intelligence.py  mock_intelligence_progressive.py
src/api/: __init__.py  conversations.py  health.py  messages.py  websocket.py
src/config/: __init__.py  settings.py
src/consumers/: __init__.py  aggregation_consumer.py  conversation_processor.py  insights_agent.py  pii_agent.py  sentiment_agent.py  summary_agent.py
src/kafka/: __init__.py  admin.py  consumer.py  producer.py
src/models/: __init__.py  conversation.py  intelligence.py  messages.py
src/schemas/: __init__.py  avro_schemas.py  registry.py
src/utils/: ccloud_config.py  ksqldb_client.py
